--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-cors = "0.7.1"
+actix-web = "4.11.0"
+alloy = { version = "1.1.0", features = ["full"] }
+anyhow = "1.0.100"
+dotenvy = "0.15.7"
+once_cell = "1.21.3"
+tracing = "0.1.41"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
