--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,12 @@ alloy = { version = "1.1.0", features = ["full"] }
 anyhow = "1.0.100"
 dotenvy = "0.15.7"
 once_cell = "1.21.3"
+reqwest = "0.12.24"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+utoipa = { version = "5.4.0", features = ["actix_extras"] }
+utoipa-actix-web = "0.1.2"
+utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "reqwest"] }
