--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,6 +13,7 @@ once_cell = "1.21.3"
 reqwest = "0.12.24"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
+toml = "0.9.8"
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
