--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,2 +1,3 @@
-CONTRACT_ADDRESS="0xYourContractAddressHere"
+CONTRACT_ADDRESS="0xbA276291a3EFE899b5B5fB2DFFd513B7347E11D7"
+PRIVATE_KEY="your_private_key_here"
 PORT=8080
