--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,7 @@ actix-cors = "0.7.1"
 actix-web = "4.11.0"
 alloy = { version = "1.1.0", features = ["full"] }
 anyhow = "1.0.100"
+dashmap = "6.1.0"
 dotenvy = "0.15.7"
 once_cell = "1.21.3"
 reqwest = "0.12.24"
