--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,3 +1,4 @@
 CONTRACT_ADDRESS="0xbA276291a3EFE899b5B5fB2DFFd513B7347E11D7"
 PRIVATE_KEY="your_private_key_here"
+COINGECKO_API_KEY="your_coingecko_api_key_here"
 PORT=8080
